...
    <string name="delete_notes_title">Delete %1$d notes?</string>
    <string name="delete_to_trash_message">Selected notes will be moved to trash.</string>
    <string name="delete_permanent_message">These notes will be permanently deleted.</string>
    <string name="delete_editor_message">This note will be moved to trash.</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_remove">Remove</string>
    <string name="action_undo">Undo</string>
    <string name="action_share">Share note</string>
    <string name="note_copied_to_clipboard">Note copied to clipboard</string>

    <!-- Export / Import -->
    <string name="export_success">Backup exported</string>
...
    <string name="note_pinned">Note pinned</string>
    <string name="note_unpinned">Note unpinned</string>
    <string name="checklist_progress">%1$d/%2$d completed</string>
    <string name="convert_to_text">Convert to text</string>
    <string name="cd_pin_notes">Pin selected notes</string>
    <string name="cd_unpin_notes">Unpin selected notes</string>
    <string name="reminder_in_one_hour">In 1 hour</string>
    <string name="reminder_tomorrow_morning">Tomorrow 9:00</string>
    <string name="reminder_next_week">Next week</string>
    <string name="reminder_pick_exact">Choose date &amp; time</string>
    <string name="reminder_pick_date">Pick a date</string>
    <string name="reminder_pick_time">Pick a time</string>
    <string name="reminder_pick_next">Next</string>
    <string name="reminder_pick_back">Back</string>
    <string name="reminder_at">Reminder %1$s %2$s</string>
    <string name="cd_selected">Selected</string>
    <string name="cd_filter_by_label">Filter by %1$s</string>
    <string name="cd_back">Back</string>
    <string name="cd_archive_note">Archive note</string>
    <string name="cd_more_options">More options</string>
...
